--- a/index.html
+++ b/index.html
@@ -254,15 +254,15 @@
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="dmitry.html">
+		    <a href="cuore_seme_gamma.html">
 					<div class="img-wrap">
-						<img src="images/dmitry/dmitry_2.jpg" alt="" class="img-responsive">
+						<img src="9_Cuore_seme_Gamma/heart seed Gamma (3).JPG" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Dmitry</h2>
-								<span>11 photos</span>
+								<h2>Cuore Seme Gamma</h2>
+								<span>3 photos</span>
 							</div>
 						</div>
 					</div>
@@ -270,45 +270,45 @@
 		  </div>
 		
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="abdullah.html">
+		    <a href="luoghi_alfa.html">
 					<div class="img-wrap">
-						<img src="images/abdullah/abdullah_1.jpg" alt="" class="img-responsive">
+						<img src="10_Luoghi_alfa/luoghi-alfa (2).JPG" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Abdullah</h2>
-								<span>13 photos</span>
+								<h2>Luoghi Alfa</h2>
+								<span>2 photos</span>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="susanne.html">
+		    <a href="luoghi_beta.html">
 					<div class="img-wrap">
-						<img src="images/susanne/susanne_2.jpg" alt="" class="img-responsive">
+						<img src="11_Luoghi_beta/luoghi-beta (4).JPG" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Susanne</h2>
-								<span>12 photos</span>
+								<h2>Luoghi Beta</h2>
+								<span>3 photos</span>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="helena.html">
+		    <a href="luoghi_gamma.html">
 					<div class="img-wrap">
-						<img src="images/helena/helena_15.jpg" alt="" class="img-responsive">
+						<img src="12_Luoghi_Gamma/luoghi-gamma (3).JPG" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Helena</h2>
-								<span>15 photos</span>
+								<h2>Luoghi Gamma</h2>
+								<span>4 photos</span>
 							</div>
 						</div>
 					</div>
@@ -316,60 +316,60 @@
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
 		  
-			<a href="carlos.html">
+			<a href="luoghi_delta.html">
 			  <div class="img-wrap">
-				  <img src="images/carlos/carlos_1.jpg" alt="" class="img-responsive">
+				  <img src="13_Luoghi_Delta/luoghi-delta (10).JPG" alt="" class="img-responsive">
 			  </div>
 			  <div class="text-wrap">
 				  <div class="text-inner">
 					  <div>
-						  <h2>Carlos</h2>
-						  <span>10 photos</span>
+						  <h2>Luoghi Delta</h2>
+						  <span>2 photos</span>
 					  </div>
 				  </div>
 			  </div>
 		  </a>
 		</div>
 		<div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="kaktus.html">
+		    <a href="luoghi_epsilon">
 					<div class="img-wrap">
-						<img src="images/kaktus/kaktus_6.jpg" alt="" class="img-responsive">
+						<img src="14_Luoghi_Epsilon/luoghi-epsilon (5).JPG" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Kaktus Towers Building</h2>
-								<span>7 photos</span>
+								<h2>Luoghi Epsilon</h2>
+								<span>3 photos</span>
 							</div>
 						</div>
 					</div>
 				</a>
 		</div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="michael_o.html">
+		    <a href="fiore_d_acciaio.html">
 					<div class="img-wrap">
-						<img src="images/michael_o/michael_o_5.jpg" alt="" class="img-responsive">
+						<img src="15_Fiore_d_acciaio/Fiore d-acciaio.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Michael O</h2>
-								<span>12 photos</span>
+								<h2>Fiore d'acciaio</h2>
+								<span>1 photo</span>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="jarh.html">
+		    <a href="dearh.html">
 					<div class="img-wrap">
-						<img src="images/jarh/jarh_1.jpg" alt="" class="img-responsive">
+						<img src="16_DeaRh/deaHr.JPG" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Jarh</h2>
-								<span>17 photos</span>
+								<h2>DearRh</h2>
+								<span>6 photos</span>
 							</div>
 						</div>
 					</div>
@@ -377,113 +377,51 @@
 		  </div>
 
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="magdalena.html">
+		    <a href="la_natura_umana.html">
 					<div class="img-wrap">
-						<img src="images/magdalena/magdalena_3.jpg" alt="" class="img-responsive">
+						<img src="17_La_natura_umana/Acqua alluminio (1).jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Magdalena</h2>
-								<span>11 photos</span>
+								<h2>La Natura Umana</h2>
+								<span>8 photos</span>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="damian.html">
+		    <a href="galileo.html">
 					<div class="img-wrap">
-						<img src="images/damian/damian_3.jpg" alt="" class="img-responsive">
+						<img src="18_Galileo/_SAM5615.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Damian</h2>
-								<span>16 photos</span>
+								<h2>Galileo</h2>
+								<span>2 photos</span>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="kaktus.html">
+		    <a href="athena.html">
 					<div class="img-wrap">
-						<img src="images/kaktus/kaktus_5.jpg" alt="" class="img-responsive">
+						<img src="19_Athena/IMG-20220318-WA0026.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Kaktus Towers Building</h2>
-								<span>7 photos</span>
+								<h2>Athena</h2>
+								<span>2 photos</span>
 							</div>
 						</div>
 					</div>
 				</a>
 		</div>
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="khalifah.html">
-					<div class="img-wrap">
-						<img src="images/khalifah/khalifah_3.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text-wrap">
-						<div class="text-inner">
-							<div>
-								<h2>Khalifah</h2>
-								<span>15 photos</span>
-							</div>
-						</div>
-					</div>
-				</a>
-		  </div>
-
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="kaktus.html">
-					<div class="img-wrap">
-						<img src="images/kaktus/kaktus_7.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text-wrap">
-						<div class="text-inner">
-							<div>
-								<h2>Kaktus Towers Building</h2>
-								<span>7 photos</span>
-							</div>
-						</div>
-					</div>
-				</a>
-		</div>
-
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="jiaming.html">
-					<div class="img-wrap">
-						<img src="images/jiaming/jiaming_7.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text-wrap">
-						<div class="text-inner">
-							<div>
-								<h2>Jiaming</h2>
-								<span>12 photos</span>
-							</div>
-						</div>
-					</div>
-				</a>
-		  </div>
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-            <a href="claes.html">
-              <div class="img-wrap">
-                <img src="images/claes/claes_7.jpg" alt="" class="img-responsive">
-              </div>
-              <div class="text-wrap">
-                <div class="text-inner">
-                  <div>
-                    <h2>Claes</h2>
-                    <span>8 photos</span>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-
+		 
 		
 		
 	</div>
