--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<div class="col-md-12 fh5co-social">
 							<a href="mailto:galliganilorenzo@gmail.com"><i class="icon-envelope"></i></a>
 							<!-- <a href="#"><i class="icon-twitter"></i></a> -->
-							<a href="https://instagram.com/lorenzogalligani"><i class="icon-instagram"></i></a>
+							<a href="https://instagram.com/lorenzo_galligani"><i class="icon-instagram"></i></a>
 						</div>
 						<div class="col-md-12" style="margin-top: 40px;">
 							<p>&copy; Copyright 2022 @ Lorenzo Galligani. All Rights Reserved. </p>
