--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<div class="grid">
 		  <div class="grid-sizer"></div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="rosso.html">
+		    <a href="#">
 					<div class="img-wrap">
 						<img src="1_Rosso/20221031_182946.jpg" alt="" class="img-responsive">
 					</div>
@@ -155,7 +155,7 @@
 						<div class="text-inner">
 							<div>
 								<h2>Astra</h2>
-								<span>4 photos</span>
+								<span>5 photos</span>
 							</div>
 						</div>
 					</div>
@@ -186,7 +186,7 @@
 						<div class="text-inner">
 							<div>
 								<h2>Presente</h2>
-								<span>6 photos</span>
+								<span>4 photos</span>
 							</div>
 						</div>
 					</div>
@@ -331,7 +331,7 @@
 		  </a>
 		</div>
 		<div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="luoghi_epsilon">
+		    <a href="luoghi_epsilon.html">
 					<div class="img-wrap">
 						<img src="14_Luoghi_Epsilon/luoghi-epsilon (5).JPG" alt="" class="img-responsive">
 					</div>
@@ -346,7 +346,7 @@
 				</a>
 		</div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="fiore_d_acciaio.html">
+		    <a href="#">
 					<div class="img-wrap">
 						<img src="15_Fiore_d_acciaio/Fiore d-acciaio.jpg" alt="" class="img-responsive">
 					</div>
