--- a/memoria.html
+++ b/memoria.html
@@ -11,7 +11,7 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>People from the Kaktus Towers</title>
+	<title>Lorenzo Galligani</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Lorenzo Galligani" />
 	<meta name="keywords" content="Lorenzo Galligani,Sculptor, Florence" />
