--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		  </div>
 		
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="la_casa_dell_albero.html">
+		    <a href="#">
 					<div class="img-wrap">
 						<img src="6_La_casa_dell_Albero/6 la casa dell'albero.jpg" alt="" class="img-responsive">
 					</div>
